# vitracker

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  index.md
docs/_includes/: head-custom.html
docs/plans/: 2025-01-09-voice-per-track-architecture.md  2025-01-09-voice-per-track-implementation.md  2025-12-01-vitracker-design.md  2025-12-01-vitracker-implementation.md  2025-12-02-vitracker-complete.md  2025-12-02-vitracker-phase2.md  2025-12-03-instrument-presets-design.md  2025-12-03-phase3-time-manipulation.md  2025-12-03-sampler-phase1-implementation.md  2025-12-03-sampler-slicer-design.md  2025-12-03-slicer-phase2-implementation.md  2025-12-04-slicer-timestretch-design.md  2025-12-05-chord-entry-design.md  2025-12-05-chord-entry-implementation.md  2025-12-05-remove-project-screen-design.md  2025-12-07-channel-strip-design.md  2025-12-07-channel-strip-implementation.md
resources/dx7/: solidlatelybass.syx
src/: App.cpp  App.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  BiquadFilter.cpp  BiquadFilter.h  ChannelStrip.cpp  ChannelStrip.h  DX7Instrument.cpp  DX7Instrument.h  DX7Voice.cpp  DX7Voice.h  Effects.cpp  Effects.h  InstrumentProcessor.h  MultibandOTT.cpp  MultibandOTT.h  PlaitsInstrument.cpp  PlaitsInstrument.h  PlaitsVoice.cpp  PlaitsVoice.h  SamplerInstrument.cpp  SamplerInstrument.h  SamplerVoice.cpp  SamplerVoice.h  SlicerInstrument.cpp  SlicerInstrument.h  SlicerVoice.cpp  SlicerVoice.h  TrackerFX.h  TransientShaper.cpp  TransientShaper.h  UniversalTrackerFX.h  VASynthInstrument.cpp  VASynthInstrument.h  VASynthVoice.cpp  VASynthVoice.h  Voice.cpp  Voice.cpp.old  Voice.h
src/dsp/: AudioAnalysis.cpp  AudioAnalysis.h  adsr_envelope.h  envelope.cpp  envelope.h  lfo.cpp  lfo.h  mod_envelope.cpp  mod_envelope.h  modulation_matrix.cpp  modulation_matrix.h  moog_filter.cpp  moog_filter.h  resampler.cpp  resampler.h  sampler_modulation.cpp  sampler_modulation.h  va_filter.h  va_oscillator.h  voice.cpp  voice.h  voice_allocator.cpp  voice_allocator.h
src/dsp/msfa/: controllers.h  dx7note.cc  env.cc  fm_core.cc  libMTSClient.h  tuning.cc  tuning.h
src/dsp/plaits/: resources.cc  user_data.h
src/dsp/plaits/dsp/fm/: algorithms.h
src/dsp/stmlib/: stmlib.h
src/dsp/stmlib/dsp/: dsp.h
src/input/: KeyAction.h  KeyHandler.cpp  KeyHandler.h  ModeManager.cpp  ModeManager.h
src/model/: Chain.cpp  Chain.h  Clipboard.h  DX7PresetBank.cpp  DX7PresetBank.h  DXParams.h  FilterParams.h  Groove.h  Instrument.cpp  Instrument.h  ModulationParams.h  Pattern.cpp  Pattern.h  PresetManager.cpp  PresetManager.h  Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h  SamplerParams.h  SlicerParams.h  Song.cpp  Song.h  Step.h  UndoManager.h  VAParams.h
src/ui/: AudioSettingsPopup.cpp  AudioSettingsPopup.h  ChainScreen.cpp  ChainScreen.h  ChannelScreen.cpp  ChannelScreen.h  ChordPopup.cpp  ChordPopup.h  HelpPopup.cpp  HelpPopup.h  InstrumentScreen.cpp  InstrumentScreen.h  MixerScreen.cpp  MixerScreen.h  PatternScreen.cpp  PatternScreen.h  ProjectScreen.cpp  ProjectScreen.h  SamplerScreen.cpp  SamplerScreen.h  Screen.cpp  Screen.h  SliceWaveformDisplay.cpp  SliceWaveformDisplay.h  SongScreen.cpp  SongScreen.h  WaveformDisplay.cpp  WaveformDisplay.h
tests/: DX7InstrumentTest.cpp
